--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -1,7 +1,13 @@
 @import "~bulma/bulma";
+.block:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
+
 nav.navbar {
   max-height: 52px;
-  background-color: #026aa7;
+  background: transparent;
+  background-color: rgba(0, 0, 0, 0.32);
+  //background-color: #026aa7; //todo: main page color
   padding: 0px 2px;
   .navbar-item.white {
     border-radius: 5px;
