--- a/src/App.scss
+++ b/src/App.scss
@@ -1,33 +1,56 @@
 @import "~bulma/bulma";
 .block:not(:last-child) {
-  margin-bottom: 1.5rem;
+  //margin-bottom: 1.5rem;
 }
 
-html {
+body {
   background-image: url("./images/background.jpg");
   /* Full height */
-  height: 100%;
+  height: 100vh;
 
   /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: auto;
 }
 
-.bg-image {
+.addListButton {
+  cursor: pointer;
+  border-radius: 3px;
+  display: flex;
+  align-items: center;
 }
 
-.columns {
-  padding: 0px 4px;
+div.columns {
+  margin-top: 45px;
+  padding: 0px 4px 0px 10px;
 }
-.column {
-  max-width: 20%;
+div.column {
+  max-width: 274px;
+  min-width: 274px;
+  padding-right: 0px;
+  padding-left: 0px;
+  margin: 0px 0px 0px 10px;
   .box {
     background-color: #ebecf0;
     padding: 10px;
   }
+  .box.addListForm-notActive {
+    background-color: hsla(0, 0%, 100%, 0.24);
+    color: white;
+  }
 }
 
-div.columns {
-  margin-top: 5px;
+input.input.is-focused {
+  font-size: 14px;
+}
+
+input.button.is-primary {
+  margin-top: 8px;
+  text-align: center;
+  height: 32px;
+  max-width: 95.67px;
+  font-size: 14px;
+  background-color: #5aac44;
 }
