--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -1,9 +1,12 @@
 @import "~bulma/bulma";
 .block:not(:last-child) {
-  margin-bottom: 1.5rem;
+  //margin-bottom: 1.5rem;
 }
 
 nav.navbar {
+  top: 0;
+  position: fixed;
+  width: 100%;
   max-height: 52px;
   background: transparent;
   background-color: rgba(0, 0, 0, 0.32);
