--- a/src/components/AddButton.scss
+++ b/src/components/AddButton.scss
@@ -1,8 +1,12 @@
-input.button.is-primary {
+.button.is-primary {
   margin-top: 8px;
   text-align: center;
   height: 32px;
   max-width: 95.67px;
   font-size: 14px;
   background-color: #5aac44;
+}
+
+input.input.is-focused {
+  font-size: 14px;
 }
